<resources>
    <string name="app_name">MPLab2Task1</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="sign_up">Sign up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="username1">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="textview1">TextView</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="textview2">TextView</string>
    <string name="textview">TextView</string>
    <string name="change_pic">Change Pic</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="username">Username</string>
</resources>
